# ThuyenRepo

./: index.html  note.txt  push-code.bat  push-code.ps1
AI_Trade/: Note.txt  README.md  requirements.txt  run.ps1  run.sh
BuaCom/: index.html  package-lock.json
CognitiveOperationSystem/: .gitignore  ai-assist-screens.js  ai-assist-test-runner.js  ai-assist-test-scenarios.js  ai-assist.js  app.js  cognitive-library.js  cognitive-tree.js  contradiction-engine.js  cursor-direct-test-runner.js  cursor-direct-test-scenarios.js  cursor-direct.js  data.js  evidence-engine.js  i18n.js  index.html  insight-engine.js  note.txt  reflection-engine.js  safety-engine.js  style.css  test-mode.js  test-scenarios.js  timeline-engine.js
EdgeMinerV2/: .gitignore  README.md  pyproject.toml  requirements.txt
EdgeMinerV2/.github/workflows/: ci.yml
EdgeMinerV2/forexforge/: __init__.py  __main__.py  analytics.py  broker.py  cli.py  contracts.py  data_loader.py  evolution.py  feature_engine.py  guardrails.py  indicators.py  jobs.py  jobs_worker.py  kb_profiles.py  knowledge_base.py  leakage.py  logging_util.py  meta_learner.py  migrate.py  ml_scorer.py  optimizer.py  paper_monitor.py  paper_sim.py  paths.py  services.py  store.py  strategy.py  strategy_miner.py  ui_app.py  wf_runner.py
EdgeMinerV2/forexforge/ui/: app.py  helpers.py  page_backtest.py  page_compare.py  page_data.py  page_guide.py  page_home.py  page_inspect.py  page_kb.py  page_paper.py
EdgeMinerV2/tests/: test_golden_wf.py  test_phase56.py  test_unit.py
EdgeMinerV2/tests/fixtures/: sample_h1.parquet
rsi/: run.ps1  (+3 more)
(+1950 files in other folders)
