[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forexforge"
version = "2.0.0"
description = "ForexForge v2 — walk-forward research engine (EUR/USD H1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyarrow>=14.0",
  "dukascopy-python>=1.0.0",
  "pydantic>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-timeout>=2.2"]
ui = ["streamlit>=1.32", "plotly>=5.18"]

[project.scripts]
ff = "forexforge.cli:main"

[tool.setuptools.packages.find]
include = ["forexforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 180
